--- a/.github/workflows/build-upload.yml
+++ b/.github/workflows/build-upload.yml
@@ -37,7 +37,7 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./output
-          cname: blog.kerollmops.com
+          cname: tara.anne.cat
           force_orphan: true
           user_name: 'github-actions[bot]'
           user_email: 'github-actions[bot]@users.noreply.github.com'
